<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.fancy_software.accounts_matching</groupId>
    <artifactId>accounts_matching</artifactId>
    <packaging>war</packaging>
    <version>0.0.1</version>
    <name>Web Application</name>
    <url>http://maven.apache.org</url>

    <properties>
        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
        <maven.compiler.source>1.6</maven.compiler.source>
        <maven.compiler.target>1.6</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <gwt.style>DETAILED</gwt.style>
        <gwt.loglevel>INFO</gwt.loglevel>
        <gwt.build.jvmArgs>-XX:MaxPermSize=192m -Xmx512m</gwt.build.jvmArgs>
        <gwt.test.pattern>**/*GwtTest.java</gwt.test.pattern>
        <spring.version>3.1.4.RELEASE</spring.version>
    </properties>

    <profiles>
        <profile>
            <id>local</id>
            <properties>
                <env>local</env>
                <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
                <tomcat.manager.login>enter your tomcat login</tomcat.manager.login>
                <tomcat.manager.password>enter your tomcat passwd</tomcat.manager.password>
                <deploy.path>/</deploy.path>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>central</id>
            <name>Nexus Public Repository</name>
            <url>http://repo1.maven.org/maven2</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>2.5.1</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>2.5.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.mvp4g</groupId>
            <artifactId>mvp4g</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>net.customware.gwt.dispatch</groupId>
            <artifactId>gwt-dispatch</artifactId>
            <version>1.1.0</version>
        </dependency>


        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>com.thoughtworks.xstream</groupId>
            <artifactId>xstream</artifactId>
            <version>1.4.4</version>
        </dependency>

        <dependency>
            <groupId>net.sf.gwt-widget</groupId>
            <artifactId>gwt-sl</artifactId>
            <version>0.1.5</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>cc.mallet</groupId>
            <artifactId>mallet</artifactId>
            <version>2.0.7-RC2</version>
        </dependency>

    </dependencies>

    <build>
        <directory>war</directory>
        <finalName>csn.${pom.version}</finalName>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/webapp</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <outputDirectory>war/WEB-INF/classes</outputDirectory>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>2.5.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>

                <configuration>
                    <modules>
                        <module>com.fancy_software.accounts_matching.webapp.application.MainModule</module>
                    </modules>
                    <style>${gwt.style}</style>
                    <logLevel>${gwt.loglevel}</logLevel>
                    <includes>${gwt.test.pattern}</includes>
                    <hostedWebapp>${project.build.directory}</hostedWebapp>
                    <extraJvmArgs>${gwt.build.jvmArgs}</extraJvmArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1.1</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <goals>
                            <goal>exploded</goal>
                        </goals>
                        <configuration>
                            <webappDirectory>${project.build.directory}</webappDirectory>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <packagingExcludes>WEB-INF/web.xml</packagingExcludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.0</version>
                <configuration>
                    <url>${tomcat.url}</url>
                    <username>${tomcat.manager.login}</username>
                    <password>${tomcat.manager.password}</password>
                    <path>${deploy.path}</path>
                    <update>true</update>
                    <warFile>
                        ${project.build.directory}/${project.build.finalName}.war
                    </warFile>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>